[build-system]
requires = ["pdm-backend", "setuptools"]
build-backend = "pdm.backend"

[project]
name = "keywin"
version = "0.1.0"
authors = [{ name = "winstxnhdw", email = "author@example.com" }]
description = "A fast Python wrapper for Win32's SendInput function."
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/winstxnhdw/KeyWin"
"Bug Tracker" = "https://github.com/winstxnhdw/KeyWin/issues"

[tool.setuptools]
include-package-data = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pylint.format]
good-names = ["x", "y", "z"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "no-name-in-module",
    "useless-import-alias",
    "line-too-long",
    "too-few-public-methods",
]

[tool.pyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["."]

[tool.pdm.build]
run-setuptools = true

[tool.pdm.dev-dependencies]
lint = ["pylint>=3.2.6", "pyright>=1.1.378", "ruff>=0.6.3"]
test = ["pytest>=8.3.2"]
build = ["setuptools>=74.0.0"]
