[project]
name = "keywin"
version = "0.1.0"
description = "A fast Python wrapper for Win32's SendInput function."
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/winstxnhdw/KeyWin"
"Bug Tracker" = "https://github.com/winstxnhdw/KeyWin/issues"

[dependency-groups]
dev = ["pyright>=1.1.408", "pytest>=8.3.5", "ruff>=0.15.8"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["keywin"]
include-package-data = false

[[tool.setuptools.ext-modules]]
name = "keywin.send_input"
sources = ["keywin/send_input/send_input.c"]
libraries = ["user32"]
extra-compile-args = ["-O3", "-march=native"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TC001", "INP001", "PYI021"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["."]
